--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,17 @@
     text-transform: uppercase;
     font-weight: bolder;
 }
+.calendar {
+  width: 85%;
+  margin: auto;
+  padding: 4rem;
+  border: none !important;
+  padding: 0;
+}
+
+.section__title {
+  text-align: center;
+}
 
 .sticky {
     background-color: rgba(0, 0, 0, 0.8) !important;
